instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: ')' expected but ';' found.
setPos(3:Int;3:Int)
            ^Instructions:1: error: ';' expected but ')' found.
setPos(3:Int;3:Int)
                  ^