instructions.Instructions.scala.code
setPos(3:Int;3:Int)
avance()
baisseBrosse()
gauche()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
leveBrosse()
gauche()
avance()
droite()
recule()